<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <TextView
        android:id="@+id/groupFragmentBackground"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#FF33B5E5"
        android:ellipsize="none"
        android:fadingEdge="horizontal|vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/editGroupButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:fadingEdge="horizontal|vertical"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/edit_group_button" />

    <TextView
        android:id="@+id/groupNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/editGroupButton"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/group_fragment_name_label" />

    <TextView
        android:id="@+id/groupTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/editGroupButton"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/group_fragment_type_label" />

</RelativeLayout>