<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroupCreatorActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/newGroupCreatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/newGroupFragmentBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="#FF303F9F"
            android:fadingEdge="horizontal|vertical" />

        <EditText
            android:id="@+id/newGroupNameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/new_group_name_input"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/newGroupTypeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newGroupNameInput"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/new_group_type_input"
            android:textAlignment="center" />

        <Button
            android:id="@+id/newGroupFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newGroupTypeInput"
            android:layout_centerHorizontal="true"
            android:text="@string/new_group_finish_button" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>